--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -8,6 +8,7 @@
                 ngModel
                 required
                 minlength="3"
+                placeholder="Title"
                 #title="ngModel">
             <mat-error *ngIf="title.invalid">Please enter a valid Title</mat-error>
         </mat-form-field>
@@ -18,6 +19,7 @@
                 name="content"
                 ngModel
                 required
+                placeholder="Content"
                 #content="ngModel"></textarea>
             <mat-error *ngIf="content.invalid">Please enter a valid Content</mat-error>
         </mat-form-field>
