mean-stack: Add routing to the App

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,8 @@
-<mat-toolbar colot='primary'>My Messages</mat-toolbar>
+<mat-toolbar colot='primary'>
+    <span><a routerLink="/">Messages</a></span>
+    <ul>
+        <li>
+            <a routerLink= "/create">New Post</a>
+        </li>
+    </ul>
+</mat-toolbar>
