--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -5,7 +5,7 @@
                 matInput
                 type="text"
                 name="title"
-                [ngModel]="post.title"
+                [ngModel]="post?.title"
                 required
                 minlength="3"
                 placeholder="Title"
@@ -17,7 +17,7 @@
                 matInput
                 rows="6"
                 name="content"
-                [ngModel]="post.content"
+                [ngModel]="post?.content"
                 required
                 placeholder="Content"
                 #content="ngModel"></textarea>
