mean-stack: Add mime-type validator to validate image uploads

--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -11,5 +11,14 @@ input[type=file] {
 }
 
 .image_button {
-    margin-left: 1rem;
+    float: right;
+}
+
+.image-preview {
+    height: 5rem;
+    margin: 1rem 0;
+}
+
+.image-preview img {
+    height: 100%;
 }
