--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,16 +1,28 @@
 <mat-card>
     <mat-spinner *ngIf="isLoading"></mat-spinner>
-    <form *ngIf="!isLoading">
+    <form (submit)="onLogin(loginForm)" #loginForm="ngForm" *ngIf="!isLoading">
         <mat-form-field>
             <input
                 matInput
+                name="email"
+                ngModel
                 type="email"
-                placeholder="E-mail">
-            <mat-error *ngIf="">Please enter a valid Email.</mat-error>
+                #emailInput="ngModel"
+                placeholder="E-mail"
+                required
+                email>
+            <mat-error *ngIf="emailInput.invalid">Please enter a valid Email.</mat-error>
         </mat-form-field>
         <mat-form-field>
-            <input type="password" matInput placeholder="Password">
-            <mat-error *ngIf="">Please enter a valid Password</mat-error>
+            <input
+                name="password"
+                type="password"
+                ngModel
+                matInput
+                #passwordInput="ngModel"
+                placeholder="Password"
+                required>
+            <mat-error *ngIf="passwordInput.invalid">Please enter a valid Password</mat-error>
         </mat-form-field>
         <button
             color='primary'
