mean-stack: Add navigation and spinner to the App
Add redirection to homepage after login and logout.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,6 +27,7 @@
         <button
             color='primary'
             mat-raised-button
-            type="submit" float:left>Login</button>
+            type="submit" float:left
+            *ngIf="!isLoading">Login</button>
     </form>
 </mat-card>
